--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,11 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>2.7.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+        </dependency>
     </dependencies>
 </project>
